--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
     <div class="container">
       <section id="main_content">
+        <h4><a href="http://paulreiber.github.com/">a paulreiber.github.com repo</a></h4>
+
         <h3>So what's this about?</h3>
 I review logfiles a LOT for my customers.  I realized that, while a single logfile may have a variety of line formats, it has both a bunch of common elements and some number of repeating instances of each line format.
 <p>
